--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         h1 {
             margin-bottom: 20px;
             font-size: 24px;
-            color: green;
+            color: rgb(128, 83, 0);
         }
 
         input {
@@ -57,7 +57,7 @@
 
         button {
             padding: 10px 20px;
-            background-color: #1db954;
+            background-color: #b9751d;
             color: #fff;
             border: none;
             border-radius: 20px;
@@ -65,7 +65,7 @@
         }
 
         button:hover {
-            background-color: #1aa34a;
+            background-color: #a3831a;
         }
 
         #results {
@@ -124,7 +124,7 @@
         }
 
         .player-controls i:hover {
-            color: #1db954;
+            color: #b99f1d;
         }
 
         .player-controls audio {
